# TokenSlim

./: COST_BENEFIT_ANALYSIS.md  DEVELOPMENT_GUIDE.md  INTEGRATION_TEST_REPORT.md  README.md  TEST_SUMMARY.md  config.json  cost_analysis.py  cost_analysis_output.txt  cost_curve_data.json  dev_prompt.md  generate_charts.py  openclaw.plugin.json  pyproject.toml  test_compression.py  test_openclaw_integration.sh
stg/: __init__.py  __main__.py  compressor.py  config.py  proxy.py  token_counter.py
